// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlyout is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-label="aria-label"
        aria-modal="true"
        class="euiFlyout testClass1 testClass2 emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right-euiTestCss"
        data-autofocus="true"
        data-test-subj="test subject string"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props accepts div props 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        id="imaflyout"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props closeButtonPosition can be outside 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-right"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props closeButtonProps 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="aria-label"
          class="euiButtonIcon euiFlyout__closeButton testClass1 testClass2 emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside-euiTestCss"
          data-test-subj="test subject string"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props hideCloseButton 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props is rendered as nav 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a custom number 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        style="max-inline-size: 1024px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a custom value and measurement 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        style="max-inline-size: 24rem;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props maxWidth can be set to a default 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props outsideClickCloses 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props ownFocus can alter mask props with maskProps without throwing error 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props ownFocus can be false 1`] = `
[
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-describedby="generated-id"
      aria-modal="true"
      class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
      data-autofocus="true"
      role="dialog"
      tabindex="0"
    >
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a non-modal dialog. To close the dialog, press Escape. 
      </p>
      <button
        aria-label="Close this dialog"
        class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
        data-test-subj="euiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`EuiFlyout props paddingSize l is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize m is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-m-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize none is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-none-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props paddingSize s is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-s-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props push flyouts renders 1`] = `
<div
  class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-push-right-noAnimation-right"
  data-test-subj="flyout"
>
  <button
    aria-label="Close this dialog"
    class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
    data-test-subj="euiFlyoutCloseButton"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="cross"
    />
  </button>
</div>
`;

exports[`EuiFlyout props sides left is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-left-left"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props sides right is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size accepts custom number 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        style="inline-size: 500px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size l is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-l-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size m is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout props size s is rendered 1`] = `
[
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="generated-id"
        aria-modal="true"
        class="euiFlyout emotion-euiFlyout-l-s-noMaxWidth-overlay-right-right"
        data-autofocus="true"
        role="dialog"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close. 
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`EuiFlyout renders extra screen reader instructions when fixed EuiHeaders headers exist on the page 1`] = `
<body
  class="euiBody--hasFlyout euiBody--headerIsFixed"
>
  <div>
    <div
      class="euiHeader emotion-euiHeader-fixed-default"
      data-fixed-header="true"
      style="inset-block-start: 0px;"
    />
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          aria-describedby="generated-id"
          aria-label="aria-label"
          aria-modal="true"
          class="euiFlyout testClass1 testClass2 emotion-euiFlyout-l-m-noMaxWidth-overlay-right-right-euiTestCss"
          data-autofocus="true"
          data-test-subj="test subject string"
          role="dialog"
          tabindex="0"
        >
          <p
            class="emotion-euiScreenReaderOnly"
            id="generated-id"
          >
            You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
             
            You can still continue tabbing through the page headers in addition to the dialog.
          </p>
          <button
            aria-label="Close this dialog"
            class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-empty-text-euiFlyout__closeButton-inside"
            data-test-subj="euiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
